# soil

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile.in  README.md  README.orig.md  appveyor.yml  configure
code/: soil.c  soil.h
src/: SOIL.c  etc1_utils.c  image_DXT.c  image_helper.c  stbi_DDS_c.h  stbi_pkm_c.h  stbi_pvr_c.h
src/SOIL2/: SOIL2.h
test/: test_SOIL2.cpp  test_perf_SOIL2.cpp
tests/: test_SOIL2.cpp  test_common.cpp  test_perf_SOIL2.cpp
